--- a/src/view/LoginView/LoginView.module.css
+++ b/src/view/LoginView/LoginView.module.css
@@ -36,8 +36,8 @@
   background-size: 200% auto;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   transition: 0.5s;
-  width: 150px;
-  height: 50px;
+  width: 100px;
+  height: 30px;
 }
 
 .btn:hover {
@@ -55,7 +55,30 @@
   appearance: none;
   outline: none;
   color: #4a4252;
-  margin-left: 5px;
+  /* margin-left: 5px; */
   width: 300px;
   text-align: center;
+}
+
+.message {
+  padding-top: 10px;
+  display: block;
+  color: white;
+  font-weight: 700;
+}
+
+.link {
+  padding-top: 7px;
+  text-decoration: none;
+  font-size: 12px;
+  width: 350px;
+  height: 100%;
+  border-radius: 5px;
+  text-transform: none;
+  background-image: linear-gradient(
+    to right,
+    #9eefe1 0%,
+    #464064 51%,
+    #9eefe1 100%
+  );
 }
