--- a/src/view/LoginView/LoginView.module.css
+++ b/src/view/LoginView/LoginView.module.css
@@ -68,11 +68,11 @@
 }
 
 .link {
-  padding-top: 7px;
+  padding-top: 8px;
   text-decoration: none;
   font-size: 12px;
   width: 350px;
-  height: 100%;
+  height: 30px;
   border-radius: 5px;
   text-transform: none;
   background-image: linear-gradient(
