--- a/src/components/AppBar/AppBar.module.css
+++ b/src/components/AppBar/AppBar.module.css
@@ -9,10 +9,17 @@
 
 .link {
   font-weight: 500;
-  font-size: 20px;
+  font-size: 23px;
   line-height: 1.667;
   color: white;
   text-decoration: none;
+}
+
+.activeLink,
+.link:hover,
+.link:focus {
+  color: #3f81e4;
+  outline: none;
 }
 
 .wrapper {
