--- a/src/view/HomeView/HomeView.module.css
+++ b/src/view/HomeView/HomeView.module.css
@@ -2,3 +2,10 @@
   /* width: 100%; */
   height: 500px;
 }
+
+.message {
+  display: block;
+  text-shadow: 4px 4px 4px silver, -4px 4px 4px silver;
+  color: white;
+  font-size: 32px;
+}
